lender/tests/fail/might_look_covariant.stderr
error: lifetime may not live long enough
  --> tests/fail/might_look_covariant.rs:31:5
   |
31 |     lender::check_covariance!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     lifetime `'short` defined here
   |     lifetime `'long` defined here
   |     associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Invariant<'_>`, which makes the generic argument `'_` invariant
   = note: the struct `Invariant<'a>` is invariant over the parameter `'a`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
   = note: this error originates in the macro `lender::check_covariance` (in Nightly builds, run with -Z macro-backtrace for more info)
